--- a/scoreKeeper.html
+++ b/scoreKeeper.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Score Keeper</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-	<link rel="stylesheet" href="scoreKeeper.css">
+	<link rel="stylesheet" href="assets/css/scoreKeeper.css">
 </head>
 
 <body>
@@ -65,7 +65,7 @@
 
 
 
-	<script type="text/javascript" src="scoreKeeper.js"></script>
+	<script type="text/javascript" src="assets/js/scoreKeeper.js"></script>
 </body>
 
 </html>
